force-app/main/default/objects/Account/fields/Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Employee_Count__c</fullName>
    <label>Employee Count</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>