force-app/main/default/objects/Account/fields/Fluxora_Industry__c.field-meta.xml
<CustomField>
    <fullName>Fluxora_Industry__c</fullName>
    <label>Fluxora Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
                <value>
                    <fullName>Ad Tech</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Gaming</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Logistics</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media & Entertainment</fullName>
                </value>
                <value>
                    <fullName>Retail & E-commerce</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>