force-app/main/default/objects/Account/fields/Tech_Stack_Tags__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack_Tags__c</fullName>
    <label>Tech Stack Tags</label>
    <type>LongTextArea</type>
    <length>1024</length>
</CustomField>